# comfyui-custom-nodes-jbb

./: .gitattributes  LICENSE  README.md  __init__.py  apply_comfyjbb_category_patch.py  apply_packaging_and_ci.ps1  install.bat  install.ps1  install.sh  nodes.py  pyproject.toml
.github/workflows/: pytest.yml
nodes/: __init__.py  nodes.py
nodes/comfyjbb-load-process-batch/: README.md  __init__.py  nodes.py  requirements.txt
nodes/comfyjbb-load-process-batch/examples/: create_example_png.py
nodes/comfyjbb_load_process_batch/: __init__.py  nodes.py
nodes/comfyjbb_load_process_batch/examples/: nodes_comfyjbb_load_process_batch_examples_example.txt
nodes/comfyui_loadheicimagefrompath/: __init__.py  nodes.py
nodes/comfyui_loadimagefrompath/: __init__.py  nodes.py
nodes/comfyui_raw_image_frompath/: __init__.py  nodes.py
tests/: test_load_and_process.py  test_root_node_mappings.py
