[project]
name = "comfyui-custom-nodes-jbb"
version = "0.1.0"
description = "COMFYJBB custom nodes for ComfyUI"
readme = "README.md"
authors = [ { name="Composed Solutions LLC" } ]
license = { text = "MIT" }
requires-python = ">=3.10"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
